# MobileGymApp

./: .gitignore  .pre-commit-config.yaml  main.kv  main.py  pyproject.toml  run.py  server_test.py
.buildozer/: state.db
.github/workflows/: python-app.yml
assets/: trainingplancard.py
modules/: dashboard.kv  dashboard.py  signup.py
pyscreens/: login.py  usertrainingplans.py
screens/: login.kv  signup.kv  userTrainingPlans.kv
tests/: test_mobile.py
